--- a/css/style.css
+++ b/css/style.css
@@ -194,19 +194,7 @@ body {
 	color: #e74c4c;
 	background-color: #fff;
 }
-.TR {
-	color: #fff;
-    padding: 15px 20px;
-    display: inline-block;
-    margin-top: 20px;
-    border: 1px solid #fff;
-    border-radius: 10px;
-}
-.TR:hover{
-	text-decoration: none;
-	color: #e74c4c;
-	background-color: #fff;
-}
+
 
 .filter a {
 	color:  ##1e3799;
@@ -387,6 +375,25 @@ body {
 	width: 100%;
 	height: 100%;
 	background: url(../img/loading.gif) center center no-repeat;
+}
+
+.subHeading{
+	font-size: 18px;
+	font-weight: 600;
+}
+
+.items{
+	padding: 0;
+	margin: 75px;
+	list-style: none;
+	text-align: center;
+	width: 100%;
+	margin-top: 50px;
+}
+
+.items li{
+	display: inline-block;
+	margin: 0 100px;
 }
 
 
